Ripping out identity pieces

--- a/TodoSPA/App/Views/UserData.html
+++ b/TodoSPA/App/Views/UserData.html
@@ -2,9 +2,9 @@
     <h3>
         Id_token content
     </h3>
-    <p>{{userInfo.userName}}</p>
-    <p>aud:{{userInfo.profile.aud}}</p>
-    <p>iss:{{userInfo.profile.iss}}</p>
+
+    <!--TODO: Add additional user profile information to the view.-->
+
     <p>iat:{{userInfo.profile.iat}}</p>
     <p>nbf:{{userInfo.profile.nbf}}</p>
     <p>exp:{{userInfo.profile.exp}}</p>
